--- a/src/ToolWindows/GHActionsToolWindow.xaml
+++ b/src/ToolWindows/GHActionsToolWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl x:Class="GitHubActionsVS.GHActionsToolWindow"
-                          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -164,7 +164,7 @@
             </Style.Triggers>
         </Style>
     </UserControl.Resources>
-    <Grid>
+    <Grid Margin="5,0,0,0">
         <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
             <StackPanel Orientation="Vertical">
                 <Expander Header="Current Branch">
