--- a/src/ToolWindows/GHActionsToolWindow.xaml
+++ b/src/ToolWindows/GHActionsToolWindow.xaml
@@ -8,6 +8,7 @@
              xmlns:util="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Utilities"
              xmlns:catalog="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.ImageCatalog"
              xmlns:toolkit="clr-namespace:Community.VisualStudio.Toolkit;assembly=Community.VisualStudio.Toolkit"
+             xmlns:resx="clr-namespace:GitHubActionsVS.Resources"
              xmlns:emoji="clr-namespace:Emoji.Wpf;assembly=Emoji.Wpf"
              xmlns:ivc="clr-namespace:GitHubActionsVS.Converters"
              toolkit:Themes.UseVsTheme="True"
@@ -42,7 +43,7 @@
             <TextBlock Text="{Binding}">
                 <TextBlock.ContextMenu>
                     <ContextMenu>
-                        <MenuItem Header="Add Secret" Click="AddSecret_Click">
+                        <MenuItem Header="{x:Static resx:UIStrings.ADD_SECRET}" Click="AddSecret_Click">
                             <MenuItem.Icon>
                                 <Image Source="pack://application:,,,/GitHubActionsVS;component/Resources/AddItem.png" />
                             </MenuItem.Icon>
@@ -59,7 +60,7 @@
                 <emoji:TextBlock Text="{Binding DisplayName}" VerticalAlignment="Bottom" Tag="{Binding Url}">
                     <TextBlock.ContextMenu>
                         <ContextMenu Visibility="{Binding Url, Converter={StaticResource NullVisibilityConverter}}">
-                            <MenuItem Header="View Log" Click="ViewLog_Click" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ContextMenu}}}">
+                            <MenuItem Header="{x:Static resx:UIStrings.VIEW_LOG}" Click="ViewLog_Click" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ContextMenu}}}">
                                 <MenuItem.Icon>
                                     <Image Source="pack://application:,,,/GitHubActionsVS;component/Resources/OpenWebSite.png" />
                                 </MenuItem.Icon>
@@ -96,12 +97,12 @@
                                             <TextBlock Text="{Binding}">
                                                 <TextBlock.ContextMenu>
                                                     <ContextMenu>
-                                                        <MenuItem Header="Edit Secret" Click="EditSecret_Click" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ContextMenu}}}">
+                                                        <MenuItem Header="{x:Static resx:UIStrings.EDIT_SECRET}" Click="EditSecret_Click" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ContextMenu}}}">
                                                             <MenuItem.Icon>
                                                                 <Image Source="pack://application:,,,/GitHubActionsVS;component/Resources/Edit.png" />
                                                             </MenuItem.Icon>
                                                         </MenuItem>
-                                                        <MenuItem Header="Delete Secret" Click="DeleteSecret_Click" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ContextMenu}}}">
+                                                        <MenuItem Header="{x:Static resx:UIStrings.DELETE_SECRET}" Click="DeleteSecret_Click" CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ContextMenu}}}">
                                                             <MenuItem.Icon>
                                                                 <Image Source="pack://application:,,,/GitHubActionsVS;component/Resources/Delete.png" />
                                                             </MenuItem.Icon>
