--- a/src/UserControls/AddEditSecret.xaml
+++ b/src/UserControls/AddEditSecret.xaml
@@ -4,6 +4,7 @@
         xmlns:local="clr-namespace:GitHubActionsVS.Helpers"
         Title="Add/Edit Secret" Height="220" Width="500" ResizeMode="NoResize" ShowInTaskbar="False" WindowStartupLocation="CenterOwner"
         xmlns:toolkit="clr-namespace:Community.VisualStudio.Toolkit;assembly=Community.VisualStudio.Toolkit"
+        xmlns:resx="clr-namespace:GitHubActionsVS.Resources"
         toolkit:Themes.UseVsTheme="True" Icon="{x:Null}">
     <Grid Margin="0,10,0,0">
         <Grid.RowDefinitions>
@@ -15,14 +16,14 @@
             <ColumnDefinition Width="auto" />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="0" Content="Name:" HorizontalAlignment="Right" VerticalAlignment="Top" FontWeight="SemiBold" />
+        <Label Grid.Row="0" Grid.Column="0" Content="{x:Static resx:UIStrings.LABEL_NAME}" HorizontalAlignment="Right" VerticalAlignment="Top" FontWeight="SemiBold" />
         <TextBox Margin="0,0,10,0" Grid.Row="0" Grid.Column="1" Name="txtName" VerticalAlignment="Top" HorizontalAlignment="Stretch" MinWidth="150"/>
-        <Label Margin="0,5,0,0" Grid.Row="1" Grid.Column="0" Content="Secret:" HorizontalAlignment="Left" VerticalAlignment="Top" FontWeight="SemiBold" />
+        <Label Margin="0,5,0,0" Grid.Row="1" Grid.Column="0" Content="{x:Static resx:UIStrings.LABEL_SECRET}" HorizontalAlignment="Left" VerticalAlignment="Top" FontWeight="SemiBold" />
         <TextBox Margin="0,5,10,0" Grid.Row="1" Grid.Column="1" Name="txtSecret" AcceptsReturn="True" VerticalContentAlignment="Top" Height="100" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Stretch" MinWidth="210" />
 
         <StackPanel Grid.Row="2" Grid.Column="2" HorizontalAlignment="Right" Orientation="Horizontal" Margin="0,5,0,0">
-            <Button Content="Save" Margin="10,0,0,0" VerticalAlignment="Center" Width="75" Height="23" Name="btnCreate" Click="Save_Click" />
-            <Button Content="Cancel" Margin="10,0" VerticalAlignment="Center" Width="75" Height="23" IsDefault="True" Name="btnCancel" Click="Cancel_Click" />
+            <Button Content="{x:Static resx:UIStrings.BUTTON_SAVE}" Margin="10,0,0,0" VerticalAlignment="Center" Width="75" Height="23" Name="btnCreate" Click="Save_Click" />
+            <Button Content="{x:Static resx:UIStrings.BUTTON_CANCEL}" Margin="10,0" VerticalAlignment="Center" Width="75" Height="23" IsDefault="True" Name="btnCancel" Click="Cancel_Click" />
         </StackPanel>
     </Grid>
 </Window>
